GNOME Bugzilla – Bug 758204
xvimagesink/ximagesink: Fix structure memory leak
Last modified: 2015-11-17 03:52:43 UTC
While testing a media file using playback-test, got the below memory leak. ==5376== 2,379 (208 direct, 2,171 indirect) bytes in 13 blocks are definitely lost in loss record 15,775 of 15,960 ==5376== at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so) ==5376== by 0x49C8BE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==5376== by 0x49DF281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==5376== by 0x4140371: gst_structure_new_id_empty_with_size (gststructure.c:145) ==5376== by 0x414276B: gst_structure_new_valist (gststructure.c:281) ==5376== by 0x41427CA: gst_structure_new (gststructure.c:253) ==5376== by 0x404636C: gst_navigation_send_mouse_event (navigation.c:160) ==5376== by 0x80533B2: motion_notify_cb (playback-test.c:2270) ==5376== by 0x439A905: ??? (in /usr/lib/i386-linux-gnu/libgtk-3.so.0.1000.8) ==5376== by 0x4937CCD: ??? (in /usr/lib/i386-linux-gnu/libgobject-2.0.so.0.4002.0) ==5376== by 0x495107F: g_signal_emit_valist (in /usr/lib/i386-linux-gnu/libgobject-2.0.so.0.4002.0) ==5376== by 0x4951BF2: g_signal_emit (in /usr/lib/i386-linux-gnu/libgobject-2.0.so.0.4002.0)
Created attachment 315718 [details] [review] fix structure memory leak
master: commit 5f79ccb420d6b270d108892f1c7e3dedbd64b57a Author: Vineeth TM <vineeth.tm@samsung.com> Date: Tue Nov 17 09:06:34 2015 +0900 xvimagesink/ximagesink: Fix structure memory leak https://bugzilla.gnome.org/show_bug.cgi?id=758204 1.6: commit fc5ad9e4eb7777c7710979858e2f7286fd9946a7 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Tue Nov 17 09:06:34 2015 +0900 xvimagesink/ximagesink: Fix structure memory leak https://bugzilla.gnome.org/show_bug.cgi?id=758204