xvimagesink/ximagesink: Fix structure memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=758204