sys/xvimage/xvimagesink.c
@@ -1126,6 +1126,7 @@ gst_xv_image_sink_navigation_send_event (GstNavigation * navigation,
 
   if (!(xwindow = xvimagesink->xwindow)) {
     g_mutex_unlock (&xvimagesink->flow_lock);
+    gst_structure_free (structure);
     return;
   }
 
